[gd_scene load_steps=5 format=3 uid="uid://ctpmsrrn0x3o6"]

[ext_resource type="Script" path="res://Scripts/entities/health_module.gd" id="1_qeumv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a263r"]
size = Vector2(35, 35)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yu1jm"]
bg_color = Color(0.454902, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rrgu2"]
bg_color = Color(0, 0.705882, 0, 1)

[node name="HealthModule" type="Area2D"]
collision_mask = 2
script = ExtResource("1_qeumv")
maxHealth = 100

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_a263r")

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -12.0
offset_top = 9.0
offset_right = 13.0
offset_bottom = 13.0
theme_override_styles/background = SubResource("StyleBoxFlat_yu1jm")
theme_override_styles/fill = SubResource("StyleBoxFlat_rrgu2")
step = 1.0
show_percentage = false

[node name="Timer" type="Timer" parent="." groups=["building"]]
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
